--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <i class="bx bxs-user-circle profile"></i>
       </div>
 
-      <img class="car-1" src="images/car-1.png" alt="" onclick="t1.reverse()" />
+      <img class="car-1" src="images/car-1.png" alt="" onclick="t2.play()" />
 
       <h1>Model S</h1>
       <p>
