--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
       <h1>Model S</h1>
       <p>
-        Model S id built form the ground up as an electric vehicle, with hight
-        strength architecture.
+        Model S是从头开始建造的，它具有高强度架构。
       </p>
 
       <div class="buy">
@@ -31,16 +30,16 @@
       </div>
 
       <img class="car-final" src="images/car-2.jpg" alt="" />
-      <h2>Congratulations</h2>
+      <h2>恭喜</h2>
       <h5 class="summary">
-        Your order for Model S will be delivered to your door step within 5-7
-        business days
+        您的模型S订单将在5-7内交付到您的门上
+        工作日
       </h5>
       <h5 class="summary-2">
-        More text that doesn't make sense but I dont know what else to type here
-        because I have never purchased a Car.
+        更多的文本没有意义，但我不知道在这里要输入什么
+        因为我从未购买过汽车。
         <br /><br /><br />
-        Thank You
+        谢谢
       </h5>
 
       <i class="bx bx-arrow-back back-button"></i>
