--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GSAP Timeline Animation</title>
+    <title>艾合买提</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -22,6 +22,7 @@
 
       <h1>Model S</h1>
       <p>
+        木姐
         Model S是从头开始建造的，它具有高强度架构。
       </p>
 
